--- a/slides/package.json
+++ b/slides/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "marp slides.md",
-    "watch": "marp -w slides.md"
+    "build": "marp index.md",
+    "watch": "marp -w index.md"
   },
   "devDependencies": {
     "@marp-team/marp-cli": "^2.2.0"
